# sigma3

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  skills-lock.json
data/: README.md
docs/: optimization-roadmap.md
scripts/: worktree.sh
src/: client.rs  config.rs  error.rs  lib.rs  model.rs  model_capabilities.rs  provider.rs  provider_http.rs  route.rs
src/providers/: anthropic.rs  chat_params.rs  common.rs  gemini.rs  mod.rs  openai.rs
src/providers/anthropic/: config.rs  error.rs  mod.rs  request.rs  response.rs  state.rs  stream.rs  tools.rs
src/providers/bedrock/: config.rs  mod.rs  request.rs  response.rs  stream.rs
src/providers/gemini/: config.rs  error.rs  helpers.rs  mod.rs  request.rs  response.rs  stream.rs
src/providers/openai/: base.rs  config.rs  error.rs  mod.rs  request.rs  response.rs  stream.rs
src/providers/openai_compatible/: base.rs  config.rs  error.rs  mod.rs  stream.rs
src/types/: metadata.rs  mod.rs
src/types/chat/: api.rs  cache_control.rs  content.rs  impls.rs  messages.rs  mod.rs  options.rs  request.rs  response.rs  streaming.rs  tools.rs
src/types/shared/: anthropic.rs  completion_tokens_details.rs  custom_grammar_format_param.rs  function_call.rs  function_object.rs  image_detail.rs  image_url.rs  mod.rs  prompt_tokens_details.rs  reasoning_effort.rs  response_format.rs
tests/: anthropic_live.rs  anthropic_provider.rs  api.rs  bedrock_live.rs  bedrock_provider.rs  client_inventory.rs  content.rs  end_to_end.rs  foundation.rs  gemini_provider.rs  impls.rs  messages.rs  openai_live.rs  openai_provider.rs  options.rs  request.rs  response.rs  semantic_chat.rs  shared.rs  streaming.rs  tools.rs
