[package]
name = "sigma"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"
http = "1"
inventory = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
derive_builder = "0.20"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
