[package]
name = "sigma"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
aws-credential-types = "1.2.14"
aws-sigv4 = "1.4.3"
aws-smithy-runtime-api = { version = "1.12.0", features = ["client"] }
bytes = "1"
crc32fast = "1.5"
futures-core = "0.3"
futures-util = "0.3"
http = "1"
inventory = "0.3"
percent-encoding = "2.3"
reqwest = { version = "0.13", default-features = false, features = ["stream", "rustls"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
derive_builder = "0.20"
thiserror = "2"

[dev-dependencies]
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.9"
wiremock = "0.6"
